--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     </head>
 
-    <body>+
+    <body>
         <div class="container">
             <h1>Search Breweries By State:</h1>
 
