changes value of submit button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <br>
                 <br>
 
-                <input type="submit" value="Go!">
+                <input type="submit" value="Beer Me!">
             </form>
 
             <p class="js-error"></p>
